<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:id="@+id/tvTitulo"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_below="@id/tvTitulo"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:id="@+id/tvNombre"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:textStyle="bold" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNombre"
        android:text="@string/especie"
        android:id="@+id/tvEspecie"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_below="@id/titulo"
        android:layout_alignBaseline="@id/tvNombre"
        android:layout_toRightOf="@id/tvNombre"
        android:layout_height="wrap_content"
        android:id="@+id/etNombre"
        android:layout_marginBottom="40dp" />



    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etNombre"
        android:layout_toRightOf="@id/tvEspecie"
        android:id="@+id/rgGrupo"
        android:focusableInTouchMode="false"
        android:layout_marginTop="10dp">

        <RadioButton
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/perro"
            android:id="@+id/rbPerro" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gato"
            android:id="@+id/rbGato" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conejo"
            android:id="@+id/rbConejo" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pajaro"
            android:id="@+id/rbPajaro" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raza"
        android:id="@+id/tvRaza"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginRight="25dp"
        android:layout_below="@id/rgGrupo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_toRightOf="@id/tvRaza"
        android:layout_below="@id/rgGrupo"
        android:layout_alignBaseline="@id/tvRaza"
        android:layout_height="wrap_content"
        android:id="@+id/etRaza" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/biografia"
        android:id="@+id/tvBiografia"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginRight="25dp"
        android:layout_below="@+id/etRaza"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etBiografia"
        android:layout_below="@+id/tvBiografia"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>